---------------------------------------------
- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.1100                                 -
---------------------------------------------
- 2021-09-26                                -
---------------------------------------------
.: WSM: Task - Fixed advertisement feature issue (WSM-426)

---------------------------------------------
- 2021-09-25                                -
---------------------------------------------
.: WSM: Task - Make the image clear to display (WSM-426)

---------------------------------------------
- 2021-09-19                                -
---------------------------------------------
.: WSM: Task - Advertisement Module (WSM-423)

---------------------------------------------
- 2021-08-23                                -
---------------------------------------------
.: WSM: Task - Upgrade to angular v12 (WSM-424)

---------------------------------------------
- 2021-08-16                                -
---------------------------------------------
.: WSM: Task - Using session to commit multiple collection update (WSM-421)
.: WSM: Task - Remove package selection (WSM-422)

- v1.0.10944                                -
---------------------------------------------
- 2021-08-03                                -
---------------------------------------------
.: WSM: Task - Activate user with correct url (WSM-410)

---------------------------------------------
- 2021-07-31                                -
---------------------------------------------
.: WSM: Task - Review Module (WSM-413)

---------------------------------------------
- 2021-07-22                                -
---------------------------------------------
.: WSM: Task - Notify user when add as contributor (WSM-420)

---------------------------------------------
- 2021-07-21                                -
---------------------------------------------