@@ -4,6 +4,11 @@
 
 - v1.0.1100                                 -
 ---------------------------------------------
+- 2021-10-03                                -
+---------------------------------------------
+.: WSM: BugFix - Fixed image upload issue (WSM-426)
+
+---------------------------------------------
 - 2021-09-26                                -
 ---------------------------------------------
 .: WSM: Task - Fixed advertisement feature issue (WSM-426)
